added preview data

--- a/src/Weathers.css
+++ b/src/Weathers.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'rubik', sans-serif;
   font-weight: 400;
   color: white;
   background-color: #101015;
