add useeffect hook for call the first data

--- a/src/Weathers.css
+++ b/src/Weathers.css
@@ -107,7 +107,7 @@ a {
   text-decoration: none;
   color: white;
   display: inline;
-  background-color: grey;
+  background-color: #1B1A1D;
   border-radius: 16px;
   text-align: center;
   align-items: center;
