--- a/src/Weathers.css
+++ b/src/Weathers.css
@@ -182,3 +182,27 @@ margin: 10px 10px;
 .columns2{
  width :200px
 }
+.popularCity{
+  text-align: left;
+  margin-top: 25px;
+  padding: 20px;
+  border-radius: 16px;
+  background-color:  #1B1A1D;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.otherCity{
+  text-align: left;
+  font-weight: 400;
+}
+.country{
+  margin-bottom: 10px;
+  text-align: left;
+  font-size: 14px;
+  color: gray;
+}
+.popularImg{
+  width: 60px;
+  height: 60px;
+}
