--- a/src/Weathers.css
+++ b/src/Weathers.css
@@ -206,3 +206,14 @@ margin: 10px 10px;
   width: 60px;
   height: 60px;
 }
+.description{
+  margin-top: 8px;
+  font-size: 14px;
+  color: lightgrey;
+}
+.imgTemp{
+  margin-left: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
