--- a/src/Weathers.css
+++ b/src/Weathers.css
@@ -37,6 +37,7 @@ form {
 
 ul,
 .dayButtons {
+  margin: 0 0 10px 0 ;
   display: flex;
   text-align: left;
   justify-content: flex-start;
@@ -73,7 +74,7 @@ li {
 .Footer {
 
   display: block;
-  margin: 100px auto;
+  margin: 10px auto;
   text-align: center;
 
 }
@@ -83,6 +84,8 @@ li {
 }
 
 .daysForecast {
+  width: 85%;
+  margin: 0 auto;
   display: flex;
   justify-content: space-around;
 
@@ -178,6 +181,8 @@ margin: 10px 10px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  width: 95vw;
+ 
 }
 .columns2{
  width :200px
@@ -216,4 +221,17 @@ margin: 10px 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.mapImg{
+  
+  display: block;
+ margin:25px auto;
+ margin-bottom: 10px;
+  width: 400px;
+}
+
+.SourceCode{
+  text-decoration: underline;
+  font-weight: 700;
+  color: white
 }
